--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,6 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 //    implementation 'com.android.support:approach'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:cardview-v7:29.0.0'
-    implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
@@ -41,6 +39,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+
+    implementation 'io.github.blongho:worldCountryData:1.4'
 
 
 }
