--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         maven {    // remove
             url 'https://maven.google.com'
         }
+        maven {url 'https://jitpack.io'}
 
     }
 }
